Added all updated exercises

--- a/working/ex_L19.ipynb
+++ b/working/ex_L19.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "a28ace73-1883-4308-8b6a-92c5568ea078",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "4f2027cc-bc86-4316-ab82-caf3e5d5f73e",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "3054e3c8-b992-4cd8-b2ea-4d2606e4c38b",
    "metadata": {},
    "outputs": [],
@@ -310,6 +310,14 @@
     "\n",
     "fig.supxlabel(\"False positive rate\", size=18, y=0.08)\n",
     "fig.supylabel(\"True positive rate\", size=18, x=0.09)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33a3185b-aa9f-4c9e-90b7-8de12a4967e4",
+   "metadata": {},
+   "source": [
+    "The GMM and K nearest neighbors classifiers have similar accuracy, higher than NB and QDA even for low numbers of gaussians and K (using all colors). Also, seems like the NB classifier performs worse when more and more colors are used."
    ]
   },
   {
