Added all updated exercises

--- a/working/ex_L20.ipynb
+++ b/working/ex_L20.ipynb
@@ -1046,7 +1046,7 @@
    "id": "b3affb84-e911-450b-8125-f0091a8deed7",
    "metadata": {},
    "source": [
-    "I use a random forest regressor (since it's faster and less memory intensive) to do regression with the $snr$ rather than classification with $det$. The threshold for a detection is $snr > 12$."
+    "I use a random forest regressor (since it's faster) to do regression with the $snr$ rather than classification with $det$. The threshold for a detection is $snr > 12$."
    ]
   },
   {
