Added all updated exercises

--- a/working/ex_L18.ipynb
+++ b/working/ex_L18.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "501e2472-4fe9-409b-bed3-574b0c8cc1fd",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "be893ce4-e6f3-4a11-9607-09cdd20c22a7",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "36cdac64-13dd-4155-91f5-ece22711614c",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "Text(0, 0.5, '$\\\\mu$')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "586196c4-5b63-41f3-858e-0cddf76793f1",
    "metadata": {},
    "outputs": [],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "12cb7a69-7085-46e0-b370-c7b733e672ae",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "bc4fd014-aab2-4328-bcb1-4a0efd0a82f2",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "21c83b74-0ba8-4724-9a13-e193133dbcf6",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-value = 0.6302670981518023\n"
+      "p-value = 0.6302670981518023\n",
+      "AIC = -88.64647606788105\n"
      ]
     }
    ],
@@ -377,7 +378,10 @@
     "\n",
     "chi2_model = np.sum(((mu_sample - DistMod(H0, O_m, 1 - O_m, z_sample)) / dmu)**2)\n",
     "p_value = 1 - chi2(len(z_sample) - 2).cdf(chi2_model)\n",
-    "print(\"p-value = \" + str(p_value))"
+    "n_params = 2\n",
+    "AIC = -chi2_model + 2*n_params + 2*n_params*(n_params + 1) / (len(z_sample) - n_params - 1)  \n",
+    "print(\"p-value = \" + str(p_value))\n",
+    "print(\"AIC = \" + str(AIC))"
    ]
   },
   {
@@ -1051,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "id": "10a55bb7-1e84-47a4-9f71-0fabb8f8560a",
    "metadata": {},
    "outputs": [],
@@ -1077,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "id": "38257d24-462d-429c-9c3b-f2aa8480520c",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "id": "e03d9abc-d37b-477f-b942-61aaa20239a2",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1114,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-value = 0.6174853289553218\n"
+      "p-value = 0.6174853289553218\n",
+      "AIC = -92.1635138676971\n"
      ]
     }
    ],
@@ -1119,7 +1124,10 @@
     "\n",
     "chi2_NoDE = np.sum(((mu_sample - LambdaCDM(H0=H0_NoDE, Om0=1, Ode0=0).distmod(z_sample).value) / dmu)**2)\n",
     "p_value_NoDE = 1 - chi2(len(z_sample) - 1).cdf(chi2_NoDE)\n",
-    "print(\"p-value = \" + str(p_value_NoDE))"
+    "n_params = 1\n",
+    "AIC_NoDE = -chi2_NoDE + 2*n_params + 2*n_params*(n_params + 1) / (len(z_sample) - n_params - 1)  \n",
+    "print(\"p-value = \" + str(p_value_NoDE))\n",
+    "print(\"AIC = \" + str(AIC_NoDE))"
    ]
   },
   {
@@ -1127,7 +1135,7 @@
    "id": "3c7aa37e-bdd6-48af-a40e-970bf35f7aa6",
    "metadata": {},
    "source": [
-    "The p-value is similar for both models."
+    "The AIC is similar for both models, but sligthly lower for the model without da."
    ]
   },
   {
