Added all updated exercises

--- a/working/ex_L18.ipynb
+++ b/working/ex_L18.ipynb
@@ -1135,7 +1135,7 @@
    "id": "3c7aa37e-bdd6-48af-a40e-970bf35f7aa6",
    "metadata": {},
    "source": [
-    "The AIC is similar for both models, but sligthly lower for the model without da."
+    "The AIC is similar for both models, but sligthly lower for the model without dark energy."
    ]
   },
   {
