--- a/working/ex_L18.ipynb
+++ b/working/ex_L18.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "501e2472-4fe9-409b-bed3-574b0c8cc1fd",
    "metadata": {},
    "outputs": [],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "12cb7a69-7085-46e0-b370-c7b733e672ae",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "bc4fd014-aab2-4328-bcb1-4a0efd0a82f2",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "id": "21c83b74-0ba8-4724-9a13-e193133dbcf6",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-value = 0.6302670981518023\n",
+      "chi2_dof = 0.9466345653886453\n",
       "AIC = -88.64647606788105\n"
      ]
     }
@@ -377,10 +377,10 @@
     "#Goodness of fit\n",
     "\n",
     "chi2_model = np.sum(((mu_sample - DistMod(H0, O_m, 1 - O_m, z_sample)) / dmu)**2)\n",
-    "p_value = 1 - chi2(len(z_sample) - 2).cdf(chi2_model)\n",
     "n_params = 2\n",
     "AIC = -chi2_model + 2*n_params + 2*n_params*(n_params + 1) / (len(z_sample) - n_params - 1)  \n",
-    "print(\"p-value = \" + str(p_value))\n",
+    "\n",
+    "print(\"chi2_dof = \" + str(chi2_model / (len(z_sample) - n_params)))\n",
     "print(\"AIC = \" + str(AIC))"
    ]
   },
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "id": "10a55bb7-1e84-47a4-9f71-0fabb8f8560a",
    "metadata": {},
    "outputs": [],
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "38257d24-462d-429c-9c3b-f2aa8480520c",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "id": "e03d9abc-d37b-477f-b942-61aaa20239a2",
    "metadata": {},
    "outputs": [
@@ -1114,7 +1114,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-value = 0.6174853289553218\n",
+      "chi2_dof = 0.951558890850785\n",
       "AIC = -92.1635138676971\n"
      ]
     }
@@ -1123,10 +1123,10 @@
     "#Goodness of fit\n",
     "\n",
     "chi2_NoDE = np.sum(((mu_sample - LambdaCDM(H0=H0_NoDE, Om0=1, Ode0=0).distmod(z_sample).value) / dmu)**2)\n",
-    "p_value_NoDE = 1 - chi2(len(z_sample) - 1).cdf(chi2_NoDE)\n",
     "n_params = 1\n",
     "AIC_NoDE = -chi2_NoDE + 2*n_params + 2*n_params*(n_params + 1) / (len(z_sample) - n_params - 1)  \n",
-    "print(\"p-value = \" + str(p_value_NoDE))\n",
+    "\n",
+    "print(\"chi2_dof = \" + str(chi2_NoDE / (len(z_sample) - n_params)))\n",
     "print(\"AIC = \" + str(AIC_NoDE))"
    ]
   },
