--- a/working/ex_L13.ipynb
+++ b/working/ex_L13.ipynb
@@ -291,17 +291,17 @@
     "Since the labels predicted by KMeans don't necessarily match with the true ones I use the adjusted Rand index to asses the quality of clustering, instead of something like a confusion matrix.\n",
     "The Rand index is defined as:\n",
     "$$\n",
-    "R = \\frac{a + b}{n \\choose 2} \\quad \\quad , \\quad \\quad R \\in [-0.5, 1.0]\n",
+    "R = \\frac{a + b}{n \\choose 2}\n",
     "$$\n",
     "\n",
-    "where $a$ is the number of pairs of elements that are assigned to the same cluster in both the predicted and true labels, $b$ is the number of pairs assigned to different clusters and $n$ is the total number of all possible pairs. The Rand index is close to 0 for random labeling.\n",
+    "where $a$ is the number of pairs of elements that are assigned to the same cluster in both the predicted and true labels, $b$ is the number of pairs assigned to different clusters and $n$ is the total number of all possible pairs.\n",
     "The Rand index is then adjusted to account for chance agreements between two clusters:\n",
     "\n",
     "$$\n",
-    "ARI = \\frac{R - E}{\\max{(R)} - E}\n",
+    "ARI = \\frac{R - E}{\\max{(R)} - E} \\quad \\quad , \\quad \\quad ARI \\in [-0.5, 1.0]\n",
     "$$\n",
     "\n",
-    "where $E$ is the expectation value of the Rand index for random clusters."
+    "where $E$ is the expectation value of the Rand index for random clusters. The adjusted Rand index is close to 0 for random labeling."
    ]
   },
   {
